# faq-chatbot

./: .env.example  .gitignore  README.md  app.py  build_vector_db.py  generator.py  pyproject.toml  requirements.txt  retriever.py  utils.py
src/: containers.py  utils.py
src/adapters/: generator.py  retriever.py
src/app/: main.py
src/domain/: chat.py
