[tool.poetry]
name = "faq-chatbot"
version = "0.1.0"
description = "NAVER SmartStore FAQ chatbot"
authors = ["Eldor Fozilov <eldorfozilov@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.115.9"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
python-dotenv = "^1.1.0"
openai = "^1.86.0"
chromadb = "^1.0.12"
tqdm = "^4.67.1"
pydantic = "^2.11.5" 
sentence-transformers = "^4.1.0"
dependency-injector = "^4.48.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"